--- a/src/main/resources/ku/cs/style/PrimaryTheme.css
+++ b/src/main/resources/ku/cs/style/PrimaryTheme.css
@@ -67,9 +67,10 @@
     -fx-color-one: #ffffff;
     -fx-color-two: #ffffff;
     -fx-color-three: #ffffff;
+    -fx-background-radius: 60;
     -fx-background-color:
-            linear-gradient(#ffffff 0%, -fx-color-two 20%, -fx-color-one 100%),
-            linear-gradient(#d0cfcf 0%, -fx-color-three 50%);
+            linear-gradient(#ffffff 0%, -fx-color-two 100%, -fx-color-one 100%),
+            linear-gradient(#ffffff 0%, -fx-color-three 10%);
     -fx-background-radius: 8, 7, 6;
     -fx-background-insets: 0, 1, 2;
     -fx-text-fill: white;
@@ -77,8 +78,7 @@
 
 .bevel-red:hover {
     -fx-color-one: rgba(255, 0, 0, 0.88);
-    -fx-color-two: rgba(255, 0, 0, 0.88);
-    -fx-color-three: rgba(255, 0, 0, 0.88);
+    -fx-color-two: rgba(246, 0, 0, 0.88);
+    -fx-color-three: rgba(255, 255, 255, 0.88);
 }
-
 
