--- a/src/main/resources/ku/cs/choiceProvideTypeBookByAdmin.fxml
+++ b/src/main/resources/ku/cs/choiceProvideTypeBookByAdmin.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.ChoiceProvideTypeBookController">
    <children>
       <Label layoutX="85.0" layoutY="15.0" text="ระบุประเภทย่อย">
          <font>
@@ -18,6 +18,11 @@
             <Font name="JasmineUPC" size="32.0" />
          </font>
       </Label>
-      <TextField layoutX="115.0" layoutY="60.0" prefHeight="50.0" prefWidth="620.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 20;" />
+      <TextField fx:id="subTypeBookTextField" layoutX="115.0" layoutY="60.0" prefHeight="50.0" prefWidth="620.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 20;" />
+      <Button fx:id="enterTypeBookButton" layoutX="751.0" layoutY="68.0" mnemonicParsing="false" style="-fx-background-color: F99F28;" text="ENTER" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
