--- a/src/main/resources/ku/cs/provideTypeBookByAdmin.fxml
+++ b/src/main/resources/ku/cs/provideTypeBookByAdmin.fxml
@@ -103,67 +103,63 @@
                               </Button>
                            </children>
                         </HBox>
-                        <ScrollPane prefHeight="650.0" prefWidth="1024.0" style="-fx-background-color: #fffcf1;">
-                           <content>
-                              <GridPane fx:id="gridPane" prefHeight="620.0" prefWidth="1013.0" style="-fx-background-color: ffffff;">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints maxHeight="302.9333557128906" minHeight="10.0" prefHeight="250.13332519531252" vgrow="SOMETIMES" />
-                                  <RowConstraints maxHeight="461.1333312988281" minHeight="10.0" prefHeight="370.66667480468743" vgrow="SOMETIMES" />
-                                </rowConstraints>
+                        <GridPane prefHeight="620.0" prefWidth="1013.0" style="-fx-background-color: ffffff;">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints maxHeight="302.9333557128906" minHeight="10.0" prefHeight="250.13332519531252" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="461.1333312988281" minHeight="10.0" prefHeight="370.66667480468743" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <AnchorPane prefHeight="238.0" prefWidth="1014.0" style="-fx-background-color: ffffff;">
                                  <children>
-                                    <AnchorPane prefHeight="238.0" prefWidth="1014.0" style="-fx-background-color: ffffff;">
-                                       <children>
-                                          <Label fx:id="topicLabel1" layoutX="70.0" layoutY="30.0" prefHeight="32.0" prefWidth="203.0" text="ชื่อประเภทหนังสือ">
-                                             <font>
-                                                <Font name="JasmineUPC" size="36.0" />
-                                             </font>
-                                          </Label>
-                                          <TextField fx:id="newBooktypeTextField" layoutX="100.0" layoutY="80.0" prefHeight="50.0" prefWidth="620.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 20;">
-                                             <font>
-                                                <Font name="JasmineUPC" size="28.0" />
-                                             </font>
-                                          </TextField>
-                                          <Button fx:id="checkBookButton" layoutX="750.0" layoutY="81.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="98.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ENTER" textFill="WHITE">
-                                             <font>
-                                                <Font name="JasmineUPC Bold" size="26.0" />
-                                             </font>
-                                          </Button>
-                                          <Label fx:id="notificationCheckTypeBookLabel" layoutX="120.0" layoutY="140.0" textFill="#ec1111">
-                                             <font>
-                                                <Font name="JasmineUPC" size="28.0" />
-                                             </font>
-                                          </Label>
-                                          <Label fx:id="topicLabel11" layoutX="70.0" layoutY="200.0" prefHeight="32.0" prefWidth="217.0" text="ประเภทหนังสือย่อย">
-                                             <font>
-                                                <Font name="JasmineUPC" size="36.0" />
-                                             </font>
-                                          </Label>
-                                          <Button fx:id="addSubTypeBookButton" layoutX="290.0" layoutY="196.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="25.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 30;" text="+" textFill="WHITE">
-                                             <font>
-                                                <Font name="JasmineUPC Bold" size="26.0" />
-                                             </font>
-                                          </Button>
-                                       </children>
-                                    </AnchorPane>
-                                    <ScrollPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-                                       <content>
-                                          <GridPane fx:id="gridPaneForSubTypeBook" prefHeight="367.0" prefWidth="1015.0" style="-fx-background-color: ffffff;">
-                                            <columnConstraints>
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                            </rowConstraints>
-                                          </GridPane>
-                                       </content>
-                                    </ScrollPane>
+                                    <Label fx:id="topicLabel1" layoutX="70.0" layoutY="30.0" prefHeight="32.0" prefWidth="203.0" text="ชื่อประเภทหนังสือ">
+                                       <font>
+                                          <Font name="JasmineUPC" size="36.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="newBooktypeTextField" layoutX="100.0" layoutY="80.0" prefHeight="50.0" prefWidth="620.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 20;">
+                                       <font>
+                                          <Font name="JasmineUPC" size="28.0" />
+                                       </font>
+                                    </TextField>
+                                    <Button fx:id="checkBookButton" layoutX="750.0" layoutY="81.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="98.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ENTER" textFill="WHITE">
+                                       <font>
+                                          <Font name="JasmineUPC Bold" size="26.0" />
+                                       </font>
+                                    </Button>
+                                    <Label fx:id="notificationCheckTypeBookLabel" layoutX="120.0" layoutY="140.0" textFill="#ec1111">
+                                       <font>
+                                          <Font name="JasmineUPC" size="28.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="topicLabel11" layoutX="70.0" layoutY="200.0" prefHeight="32.0" prefWidth="217.0" text="ประเภทหนังสือย่อย">
+                                       <font>
+                                          <Font name="JasmineUPC" size="36.0" />
+                                       </font>
+                                    </Label>
+                                    <Button fx:id="addSubTypeBookButton" layoutX="290.0" layoutY="196.0" mnemonicParsing="false" onAction="#handleAddSubTypeBookButton" prefHeight="29.0" prefWidth="25.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 30;" text="+" textFill="WHITE">
+                                       <font>
+                                          <Font name="JasmineUPC Bold" size="26.0" />
+                                       </font>
+                                    </Button>
                                  </children>
-                              </GridPane>
-                           </content>
-                        </ScrollPane>
+                              </AnchorPane>
+                              <ScrollPane prefHeight="380.0" prefWidth="1024.0" style="-fx-background-color: ffffff;" GridPane.rowIndex="1">
+                                 <content>
+                                    <GridPane fx:id="gridPaneForSubTypeBook" prefHeight="369.0" prefWidth="1021.0" style="-fx-background-color: ffffff;">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                    </GridPane>
+                                 </content>
+                              </ScrollPane>
+                           </children>
+                        </GridPane>
                      </children>
                   </VBox>
                </children>
