--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -343,7 +343,7 @@
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Button>
-                  <VBox layoutX="539.0" layoutY="304.0" prefHeight="200.0" prefWidth="100.0">
+                  <VBox alignment="CENTER" layoutX="350.0" layoutY="250.0" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <GridPane fx:id="showPopupGrid">
                           <rowConstraints>
