--- a/src/main/resources/ku/cs/buyBookPopup.fxml
+++ b/src/main/resources/ku/cs/buyBookPopup.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -8,79 +9,114 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" style="-fx-background-radius: 20; -fx-background-color: FFFCF1;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ConfirmOrderController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="400.0" style="-fx-background-radius: 20; -fx-background-color: FFFCF1;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ConfirmOrderController">
    <children>
-      <Text layoutX="148.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="สั่งซื้อสินค้า" wrappingWidth="111.4278564453125">
+      <Text layoutX="148.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="สั่งซื้อสินค้า" wrappingWidth="111.4278564453125">
          <font>
             <Font name="JasmineUPC" size="29.0" />
          </font>
       </Text>
-      <Text fill="#f99f28" layoutX="14.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="สั่งซื้อ">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Text>
-      <Text fill="#f99f28" layoutX="10.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="จำนวนที่ต้องการซื้อ">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Text>
-      <ImageView fitHeight="27.0" fitWidth="26.0" layoutX="351.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/BackIcon.png" />
-         </image>
-      </ImageView>
-      <VBox layoutX="70.0" layoutY="74.0" maxHeight="304.0" prefHeight="15.0" prefWidth="304.0">
+      <HBox layoutX="15.0" layoutY="90.0">
          <children>
-            <Label fx:id="bookNameLabel" maxWidth="304.0" prefHeight="26.0" prefWidth="304.0" text="bookName" wrapText="true">
+            <Text fill="#f99f28" strokeType="OUTSIDE" strokeWidth="0.0" text="สั่งซื้อ">
+               <font>
+                  <Font name="JasmineUPC" size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets top="7.0" />
+               </HBox.margin>
+            </Text>
+            <Label fx:id="bookNameLabel" maxWidth="313.0" prefHeight="26.0" prefWidth="313.0" text="bookName" wrapText="true">
                <font>
                   <Font name="JasmineUPC" size="18.0" />
                </font>
+               <HBox.margin>
+                  <Insets left="7.0" />
+               </HBox.margin>
             </Label>
          </children>
-      </VBox>
-      <Label fx:id="sumBookPriceLabel" layoutX="162.0" layoutY="167.0" text="ราคารวม">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Label>
-      <Line endX="100.0" fill="#4c82ac" layoutX="199.0" layoutY="48.0" startX="-100.0" />
-      <TextField fx:id="inputNumOfBookTextField" layoutX="162.0" layoutY="114.0" prefHeight="26.0" prefWidth="84.0" promptText="ใส่จำนวน">
-         <font>
-            <Font name="JasmineUPC" size="18.0" />
-         </font>
-      </TextField>
-      <Text layoutX="259.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เล่ม">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Text>
-      <Text fill="#f99f28" layoutX="14.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ราคาสินค้าทั้งหมด">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Text>
-      <Button layoutX="299.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleAddNumOfBookInput" prefHeight="27.0" prefWidth="64.0" style="-fx-background-radius: 20; -fx-background-color: C9AD88;" text="ยืนยัน" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="17.0" />
-         </font>
-      </Button>
-      <Text fx:id="bookPriceLabel1" layoutX="259.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Baht.">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Text>
-      <Button layoutX="119.0" layoutY="214.0" mnemonicParsing="false" onAction="#handleComfirmBuyBook" prefHeight="34.0" prefWidth="146.0" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="ยืนยันสั่งซื้อสินค้า" textFill="WHITE">
+      </HBox>
+      <HBox layoutX="14.0" layoutY="140.0">
+         <children>
+            <Text fill="#f99f28" layoutY="10.0" strokeType="OUTSIDE" strokeWidth="0.0" text="จำนวนที่ต้องการซื้อ">
+               <font>
+                  <Font name="JasmineUPC" size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin>
+            </Text>
+            <TextField fx:id="inputNumOfBookTextField" prefHeight="27.0" prefWidth="90.0" promptText="ใส่จำนวน">
+               <font>
+                  <Font name="JasmineUPC" size="18.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </HBox.margin>
+            </TextField>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="เล่ม">
+               <font>
+                  <Font name="JasmineUPC" size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets top="6.0" />
+               </HBox.margin>
+            </Text>
+            <Button mnemonicParsing="false" onAction="#handleAddNumOfBookInput" prefHeight="27.0" prefWidth="69.0" style="-fx-background-radius: 20; -fx-background-color: C9AD88;" text="ยืนยัน" textFill="WHITE">
+               <font>
+                  <Font name="JasmineUPC" size="17.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="15.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
+      <ImageView fitHeight="27.0" fitWidth="26.0" layoutX="358.0" layoutY="11.0" onMouseClicked="#handleClosePage" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/cancel.jpg" />
+         </image>
+      </ImageView>
+      <Line endX="100.0" fill="#4c82ac" layoutX="198.0" layoutY="65.0" startX="-100.0" />
+      <HBox layoutX="14.0" layoutY="195.0">
+         <children>
+            <Text fill="#f99f28" strokeType="OUTSIDE" strokeWidth="0.0" text="ราคาสินค้าทั้งหมด">
+               <font>
+                  <Font name="JasmineUPC" size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets top="2.0" />
+               </HBox.margin>
+            </Text>
+            <Label fx:id="sumBookPriceLabel" text="ราคารวม">
+               <font>
+                  <Font name="JasmineUPC" size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="25.0" right="15.0" />
+               </HBox.margin>
+            </Label>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Baht.">
+               <font>
+                  <Font name="JasmineUPC" size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="10.0" top="2.0" />
+               </HBox.margin>
+            </Text>
+         </children>
+      </HBox>
+      <Button layoutX="124.0" layoutY="250.0" mnemonicParsing="false" onAction="#handleComfirmBuyBook" prefHeight="38.0" prefWidth="146.0" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="ยืนยันสั่งซื้อสินค้า" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="21.0" />
          </font>
       </Button>
-      <Text fx:id="noficationItem" fill="RED" layoutX="30.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="สินค้าในคลังไม่เพียงพอ กรุณากรอกจำนวนใหม่">
+      <Text fx:id="noficationItem" fill="RED" layoutX="34.0" layoutY="320.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0">
          <font>
             <Font name="JasmineUPC" size="23.0" />
          </font>
