--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -126,65 +126,45 @@
                   </Button>
                   <HBox layoutX="82.0" layoutY="655.0" prefHeight="54.0" prefWidth="865.0" style="-fx-border-color: gray; -fx-border-radius: 10;">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css">
-                           <graphic>
-                              <ImageView fitHeight="43.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true" styleClass="bevel-red">
-                                 <image>
-                                    <Image url="@image/heart1.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
+                        <Button fx:id="addRatingPlusOne" mnemonicParsing="false" onAction="#handleAddRatingPlusOneButton" prefHeight="54.0" prefWidth="52.0" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css" text="1">
                            <HBox.margin>
                               <Insets left="250.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="JasmineUPC" size="20.0" />
+                           </font>
                         </Button>
-                        <Button mnemonicParsing="false" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css">
-                           <graphic>
-                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true" styleClass="bevel-red">
-                                 <image>
-                                    <Image url="@image/heart1.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
+                        <Button fx:id="addRatingPlusTwo" mnemonicParsing="false" onAction="#handleAddRatingPlusTwoButton" prefHeight="54.0" prefWidth="52.0" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css" text="2">
                            <HBox.margin>
                               <Insets left="10.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="JasmineUPC" size="20.0" />
+                           </font>
                         </Button>
-                        <Button mnemonicParsing="false" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css">
-                           <graphic>
-                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true" styleClass="bevel-red">
-                                 <image>
-                                    <Image url="@image/heart1.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
+                        <Button fx:id="addRatingPlusThree" mnemonicParsing="false" onAction="#handleAddRatingPlusThreeButton" prefHeight="54.0" prefWidth="52.0" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css" text="3">
                            <HBox.margin>
                               <Insets left="10.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="JasmineUPC" size="20.0" />
+                           </font>
                         </Button>
-                        <Button mnemonicParsing="false" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css">
-                           <graphic>
-                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true" styleClass="bevel-red">
-                                 <image>
-                                    <Image url="@image/heart1.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
+                        <Button fx:id="addRatingPlusFour" mnemonicParsing="false" onAction="#handleAddRatingPlusFourButton" prefHeight="54.0" prefWidth="52.0" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css" text="4">
                            <HBox.margin>
                               <Insets left="10.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="JasmineUPC" size="20.0" />
+                           </font>
                         </Button>
-                        <Button mnemonicParsing="false" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css">
-                           <graphic>
-                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true" styleClass="bevel-red">
-                                 <image>
-                                    <Image url="@image/heart1.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
+                        <Button fx:id="addRatingPlusFive" mnemonicParsing="false" onAction="#handleAddRatingPlusFiveButton" prefHeight="54.0" prefWidth="52.0" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css" text="5">
                            <HBox.margin>
                               <Insets left="10.0" />
                            </HBox.margin>
+                           <font>
+                              <Font name="JasmineUPC" size="20.0" />
+                           </font>
                         </Button>
                      </children>
                   </HBox>
