--- a/src/main/resources/ku/cs/buyBookPopup.fxml
+++ b/src/main/resources/ku/cs/buyBookPopup.fxml
@@ -30,7 +30,7 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <ImageView fitHeight="27.0" fitWidth="26.0" layoutX="351.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="27.0" fitWidth="26.0" layoutX="351.0" layoutY="12.0" onMouseClicked="#handleClosePage" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/BackIcon.png" />
          </image>
@@ -65,7 +65,7 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <Button layoutX="299.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleAddNumOfBookInput" prefHeight="27.0" prefWidth="64.0" style="-fx-background-radius: 20; -fx-background-color: C9AD88;" text="ยืนยัน" textFill="WHITE">
+      <Button cache="true" layoutX="299.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleAddNumOfBookInput" prefHeight="27.0" prefWidth="64.0" style="-fx-background-radius: 20; -fx-background-color: C9AD88;" text="ยืนยัน" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="17.0" />
          </font>
@@ -80,7 +80,7 @@
             <Font name="JasmineUPC" size="21.0" />
          </font>
       </Button>
-      <Text fx:id="noficationItem" fill="RED" layoutX="30.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="สินค้าในคลังไม่เพียงพอ กรุณากรอกจำนวนใหม่">
+      <Text fx:id="noficationItem" fill="RED" layoutX="30.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0">
          <font>
             <Font name="JasmineUPC" size="23.0" />
          </font>
