--- a/src/main/resources/ku/cs/reporting.fxml
+++ b/src/main/resources/ku/cs/reporting.fxml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #c9ad88;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ReportingController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #c9ad88;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ReportingController">
    <children>
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="WHITE" height="690.0" layoutX="262.0" layoutY="39.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="500.0" />
       <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#cccccc" height="300.0" layoutX="287.0" layoutY="130.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="450.0" />
@@ -49,7 +55,7 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <Button layoutX="492.0" layoutY="684.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="88.0" style="-fx-background-color: F99F28;" text="รายงาน" textFill="WHITE">
+      <Button layoutX="492.0" layoutY="684.0" mnemonicParsing="false" onAction="#handleReportButton" prefHeight="28.0" prefWidth="88.0" style="-fx-background-color: F99F28;" text="รายงาน" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
@@ -60,5 +66,10 @@
          </font>
       </Button>
       <Line endX="100.0" layoutX="592.0" layoutY="104.0" startX="-260.79998779296875" startY="7.62939453125E-6" />
+      <Text fx:id="errorText" fill="#bf0000" layoutX="322.0" layoutY="705.0" strokeType="OUTSIDE" strokeWidth="0.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
