--- a/src/main/resources/ku/cs/reporting.fxml
+++ b/src/main/resources/ku/cs/reporting.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -15,13 +16,10 @@
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #c9ad88;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ReportingController">
    <children>
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="WHITE" height="690.0" layoutX="262.0" layoutY="39.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="500.0" />
-      <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#cccccc" height="300.0" layoutX="287.0" layoutY="130.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="450.0" />
-      <Text fill="WHITE" layoutX="411.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Image">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Text>
-      <ImageView fx:id="reportImage" fitHeight="300.0" fitWidth="450.0" layoutX="287.0" layoutY="130.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="reportImage" fitHeight="300.0" fitWidth="450.0" layoutX="287.0" layoutY="130.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/DefaultReport.png" />
+         </image></ImageView>
       <Text fill="#845d2e" layoutX="287.0" layoutY="460.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เลือกชื่อบัญชีที่ต้องการรายงาน">
          <font>
             <Font name="JasmineUPC" size="24.0" />
@@ -29,7 +27,7 @@
       </Text>
       <HBox layoutX="312.0" layoutY="475.0" prefHeight="28.0" prefWidth="400.0">
          <children>
-            <ComboBox fx:id="accountNameChoice" prefHeight="28.0" prefWidth="131.0" promptText="ชื่อบัญชี" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" visibleRowCount="6" />
+            <TextField fx:id="userNameTextField" prefHeight="28.0" prefWidth="131.0" promptText="ชื่อผู้ใช้ (username)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" />
             <Pane maxWidth="25.0" minWidth="25.0" style="-fx-background-color: transparent;" />
             <ComboBox fx:id="reportTypeChoice" prefHeight="28.0" prefWidth="129.0" promptText="ประเภทการรายงาน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" visibleRowCount="6" />
             <Pane maxWidth="25.0" minWidth="25.0" style="-fx-background-color: transparent;" />
