--- a/src/main/resources/ku/cs/provideTypeBookByAdmin.fxml
+++ b/src/main/resources/ku/cs/provideTypeBookByAdmin.fxml
@@ -60,7 +60,7 @@
                <children>
                   <VBox layoutX="39.0" layoutY="71.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <HBox prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #fffcf1;">
+                        <HBox prefHeight="90.0" prefWidth="1024.0" style="-fx-background-color: #fffcf1;">
                            <children>
                               <Label fx:id="topicLabel" prefHeight="32.0" prefWidth="170.0" text="จัดการร้านค้า">
                                  <font>
@@ -88,56 +88,72 @@
                               </Label>
                            </children>
                         </HBox>
-                        <GridPane prefHeight="620.0" prefWidth="1013.0" style="-fx-background-color: ffffff;">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints maxHeight="302.9333557128906" minHeight="10.0" prefHeight="250.13332519531252" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="461.1333312988281" minHeight="10.0" prefHeight="370.66667480468743" vgrow="SOMETIMES" />
-                          </rowConstraints>
+                        <HBox prefHeight="599.0" prefWidth="1024.0">
                            <children>
-                              <AnchorPane prefHeight="238.0" prefWidth="1014.0" style="-fx-background-color: ffffff;">
+                              <GridPane prefHeight="620.0" prefWidth="1013.0" style="-fx-background-color: ffffff;">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints maxHeight="302.9333557128906" minHeight="10.0" prefHeight="250.13332519531252" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="461.1333312988281" minHeight="10.0" prefHeight="370.66667480468743" vgrow="SOMETIMES" />
+                                </rowConstraints>
                                  <children>
-                                    <Label fx:id="topicLabel1" layoutX="70.0" layoutY="30.0" prefHeight="32.0" prefWidth="203.0" text="ชื่อประเภทหนังสือ">
-                                       <font>
-                                          <Font name="JasmineUPC" size="36.0" />
-                                       </font>
-                                    </Label>
-                                    <TextField fx:id="newBooktypeTextField" layoutX="100.0" layoutY="80.0" onKeyReleased="#handleKeyNewBookTypeTextField" prefHeight="50.0" prefWidth="620.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 20;">
-                                       <font>
-                                          <Font name="JasmineUPC" size="28.0" />
-                                       </font>
-                                    </TextField>
-                                    <Button fx:id="checkBookButton" layoutX="750.0" layoutY="81.0" mnemonicParsing="false" onAction="#handleEnterTypeBookButton" prefHeight="43.0" prefWidth="98.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ENTER" textFill="WHITE">
-                                       <font>
-                                          <Font name="JasmineUPC Bold" size="26.0" />
-                                       </font>
-                                    </Button>
-                                    <Label fx:id="notificationCheckTypeBookLabel" layoutX="120.0" layoutY="140.0" textFill="#ec1111">
-                                       <font>
-                                          <Font name="JasmineUPC" size="22.0" />
-                                       </font>
-                                    </Label>
-                                    <Label fx:id="topicLabel11" layoutX="70.0" layoutY="200.0" prefHeight="32.0" prefWidth="217.0" text="ประเภทหนังสือย่อย">
-                                       <font>
-                                          <Font name="JasmineUPC" size="36.0" />
-                                       </font>
-                                    </Label>
-                                    <Button fx:id="addSubTypeBookButton" layoutX="290.0" layoutY="196.0" mnemonicParsing="false" onAction="#handleAddSubTypeBookButton" prefHeight="29.0" prefWidth="25.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 30;" text="+" textFill="WHITE">
-                                       <font>
-                                          <Font name="JasmineUPC Bold" size="26.0" />
-                                       </font>
-                                    </Button>
+                                    <AnchorPane prefHeight="238.0" prefWidth="1014.0" style="-fx-background-color: ffffff;">
+                                       <children>
+                                          <Label fx:id="topicLabel1" layoutX="70.0" layoutY="30.0" prefHeight="32.0" prefWidth="203.0" text="ชื่อประเภทหนังสือ">
+                                             <font>
+                                                <Font name="JasmineUPC" size="36.0" />
+                                             </font>
+                                          </Label>
+                                          <TextField fx:id="newBooktypeTextField" layoutX="100.0" layoutY="80.0" onKeyReleased="#handleKeyNewBookTypeTextField" prefHeight="50.0" prefWidth="620.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 20;">
+                                             <font>
+                                                <Font name="JasmineUPC" size="28.0" />
+                                             </font>
+                                          </TextField>
+                                          <Button fx:id="checkBookButton" layoutX="750.0" layoutY="81.0" mnemonicParsing="false" onAction="#handleEnterTypeBookButton" prefHeight="43.0" prefWidth="98.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ENTER" textFill="WHITE">
+                                             <font>
+                                                <Font name="JasmineUPC Bold" size="26.0" />
+                                             </font>
+                                          </Button>
+                                          <Label fx:id="notificationCheckTypeBookLabel" layoutX="120.0" layoutY="140.0" textFill="#ec1111">
+                                             <font>
+                                                <Font name="JasmineUPC" size="22.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="topicLabel11" layoutX="70.0" layoutY="190.0" prefHeight="32.0" prefWidth="217.0" text="ประเภทหนังสือย่อย">
+                                             <font>
+                                                <Font name="JasmineUPC" size="36.0" />
+                                             </font>
+                                          </Label>
+                                          <Button fx:id="addSubTypeBookButton" layoutX="290.0" layoutY="190.0" mnemonicParsing="false" onAction="#handleAddSubTypeBookButton" prefHeight="29.0" prefWidth="25.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 30;" text="+" textFill="WHITE">
+                                             <font>
+                                                <Font name="JasmineUPC Bold" size="26.0" />
+                                             </font>
+                                          </Button>
+                                       </children>
+                                    </AnchorPane>
+                                    <ScrollPane hbarPolicy="NEVER" prefHeight="380.0" prefWidth="1024.0" style="-fx-background-color: ffffff;" GridPane.rowIndex="1">
+                                       <content>
+                                          <FlowPane fx:id="flowPaneForSubTypeBook" prefHeight="358.0" prefWidth="1024.0" style="-fx-background-color: ffffff;" />
+                                       </content>
+                                    </ScrollPane>
                                  </children>
-                              </AnchorPane>
-                              <ScrollPane hbarPolicy="NEVER" prefHeight="380.0" prefWidth="1024.0" style="-fx-background-color: ffffff;" GridPane.rowIndex="1">
-                                 <content>
-                                    <FlowPane fx:id="flowPaneForSubTypeBook" prefHeight="380.0" prefWidth="1024.0" style="-fx-background-color: ffffff;" />
-                                 </content>
-                              </ScrollPane>
+                              </GridPane>
                            </children>
-                        </GridPane>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="1024.0" style="-fx-background-color: ffffff;">
+                           <children>
+                              <Button fx:id="saveSubtypeBookButton" mnemonicParsing="false" onAction="#handleSaveTypeBookButton" prefHeight="50.0" prefWidth="220.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="บันทึกข้อมูลทั้งหมด" textFill="WHITE">
+                                 <font>
+                                    <Font name="JasmineUPC Bold" size="26.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="770.0" top="10.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
                      </children>
                   </VBox>
                </children>
